--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <div class="content">
             Leveraging material science for your research and business growth
         </div>
-        <div class="engage"><a href="../engage/EngageWithus.html">
+        <div class="engage"><a href="engage/EngageWithus.html">
             <div class="engagetextnvector">
                 Engage with us <img src="resources/Vector.png">
             </div>
