--- a/contact/contact.html
+++ b/contact/contact.html
@@ -32,14 +32,14 @@
           <div class="contact-section1__flex-item1">
             <div class="contact-section1__block20 layout">
               <div class="contact-section1__block13 layout">
-                <div class="contact-section1__text-body2 layout">HOME</div>
+                <a href="../home.html" class="contact-section1__text-body2 layout">HOME</a>
               </div>
               <div class="contact-section1__block14 layout">
-                <div class="contact-section1__text-body2 layout1">WHO WE ARE</div>
+                <a href="../whoweare/Whoweare.html" class="contact-section1__text-body2 layout1">WHO WE ARE</a>
               </div>
               <div class="contact-section1__block21 layout">
                 <div class="contact-section1__block22 layout">
-                  <div class="contact-section1__text-body2 layout2">WHAT WE DO</div>
+                  <a href="../whatwedo/Whatwedo.html" class="contact-section1__text-body2 layout2">WHAT WE DO</a>
                   <div class="contact-section1__block22-spacer"></div>
                   <div class="contact-section1__block22-item">
                     <div class="contact-section1__block23 layout">
@@ -51,13 +51,13 @@
                 </div>
               </div>
               <div class="contact-section1__block24 layout">
-                <div class="contact-section1__text-body2 layout3">UPCOMING</div>
+                <a href="../upcoming/Upcoming.html" class="contact-section1__text-body2 layout3">UPCOMING</a>
               </div>
               <div class="contact-section1__block16 layout">
-                <div class="contact-section1__text-body2 layout4">ENGAGE WITH US</div>
+                <a href="../engage/EngageWithus.html" class="contact-section1__text-body2 layout4">ENGAGE WITH US</a>
               </div>
               <div class="contact-section1__block25 layout">
-                <div class="contact-section1__text-body3 layout">CONTACT</div>
+                <a href="../contact/contact.html" class="contact-section1__text-body3 layout">CONTACT</a>
                 <hr class="contact-section1__line1 layout" />
               </div>
             </div>
@@ -73,14 +73,14 @@
         </div>
       </div>
       <div class="contact-section1__flex1 layout">
-        <div class="contact-section1__text-body layout">Home</div>
+        <a href="../contact/contact.html" class="contact-section1__text-body layout">Home</a>
         <div class="contact-section1__flex1-spacer"></div>
         <div class="contact-section1__flex1-item">
           <div style="--src:url(../assets/85913d1e0080847ef5fdbcf822fe00f6.png)" class="contact-section1__image layout">
           </div>
         </div>
         <div class="contact-section1__flex1-spacer1"></div>
-        <div class="contact-section1__text-body layout">Engage with us</div>
+        <a href="../engage/EngageWithus.html" class="contact-section1__text-body layout">Engage with us</a>
       </div>
       <div class="contact-section1__flex2 layout">
         <div class="contact-section1__flex2-item">
@@ -90,16 +90,21 @@
 Let’s 
 connect</pre>
             </h1>
-            <div class="contact-section1__flex4 layout">
-              <h5 class="contact-section1__highlights1 layout">Name*</h5>
+            <form class="contact-section1__flex4 layout">
+              <!-- <input class="contact-section1__highlights1 layout" for="name" typ >Name* </input> -->
+              <input type="text" name="name" id="name" class="contact-section1__highlights1 layout" placeholder="Name*" >
+              <!-- <h5 class="contact-section1__highlights1 layout">Name*</h5> -->
               <hr class="contact-section1__line2 layout" />
-              <h5 class="contact-section1__highlights1 layout1">Email*</h5>
+              <!-- <h5 class="contact-section1__highlights1 layout1">Email*</h5> -->
+              <input type="email" name="email" id="email" class="contact-section1__highlights1 layout1" placeholder="Email*">
               <hr class="contact-section1__line2 layout" />
-              <h5 class="contact-section1__highlights1 layout2">Mobile number*</h5>
+              <!-- <h5 class="contact-section1__highlights1 layout2">Mobile number*</h5> -->
+              <input type="text" name="mobNo" id="mobno" placeholder="Mobile number*" class="contact-section1__highlights1 layout2">
               <hr class="contact-section1__line2 layout1" />
-              <div class="contact-section1__box2 layout"></div>
+              <!-- <div class="contact-section1__box2 layout"></div> -->
+              <textarea name="" id="" cols="30" rows="10" class="contact-section1__box2 layout"></textarea>
               <h5 class="contact-section1__highlights1 layout3">How can we help you?</h5>
-            </div>
+            </form>
           </div>
         </div>
         <div class="contact-section1__flex2-spacer"></div>
@@ -115,11 +120,8 @@ Uttar Pradesh</pre>
               </h5>
               <h5 class="contact-section1__highlights2 layout">info@scinomat.com</h5>
               <h5 class="contact-section1__highlights3 layout">+91 1234567890/ +91 0123456789</h5>
-              <div style="--src:url(../assets/2efbcfa46de1b7449c60b03d9d22f64b.png)"
-                class="contact-section1__block28 layout">
-                <px-posize track-style='{"flexGrow":1}' x="26.21% 37.85% 35.93%" y="189px minmax(0px, 16fr) 136fr">
-                  <div class="contact-section1__text-body4">Scinomat Solutions Pvt Ltd</div>
-                </px-posize>
+              <div class="contact-section1__block28 layout">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114312.50877228603!2d80.26834235778446!3d26.447156629017698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c4770b127c46f%3A0x1778302a9fbe7b41!2sKanpur%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1655488135216!5m2!1sen!2sin" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
             <div style="--src:url(../assets/96d4a590d1d6ccec2b3bbea0d7ee4186.png)" class="contact-section1__icon3 layout">
@@ -206,27 +208,27 @@ Uttar Pradesh</pre>
               <div class="contact-section2__block12 layout">
                 <div class="contact-section2__block12-item">
                   <div class="contact-section2__block13 layout">
-                    <div class="contact-section2__text-body2 layout">HOME</div>
+                    <a href="../home.html" class="contact-section2__text-body2 layout">HOME</a>
                   </div>
                 </div>
                 <div class="contact-section2__block12-item1">
                   <div class="contact-section2__block14 layout">
-                    <div class="contact-section2__text-body2 layout1">WHO WE ARE</div>
+                    <a href="../whoweare/Whoweare.html" class="contact-section2__text-body2 layout1">WHO WE ARE</a>
                   </div>
                 </div>
                 <div class="contact-section2__block12-item2">
                   <div class="contact-section2__block15 layout">
-                    <div class="contact-section2__text-body2 layout2">WHAT WE DO</div>
+                    <a href="../whatwedo/Whatwedo.html" class="contact-section2__text-body2 layout2">WHAT WE DO</a>
                   </div>
                 </div>
                 <div class="contact-section2__block12-item3">
                   <div class="contact-section2__block16 layout">
-                    <div class="contact-section2__text-body2 layout3">ENGAGE WITH US</div>
+                    <a href="../engage/EngageWithus.html" class="contact-section2__text-body2 layout3">ENGAGE WITH US</a>
                   </div>
                 </div>
                 <div class="contact-section2__block12-item4">
                   <div class="contact-section2__block17 layout">
-                    <div class="contact-section2__text-body2 layout4">CONTACT</div>
+                    <a href="../contact/contact.html" class="contact-section2__text-body2 layout4">CONTACT</a>
                   </div>
                 </div>
               </div>
@@ -243,22 +245,22 @@ Uttar Pradesh</pre>
               <div class="contact-section2__block2 layout">
                 <div class="contact-section2__block2-item">
                   <div class="contact-section2__block3 layout">
-                    <div class="contact-section2__text-body layout">Privacy policy</div>
+                    <a href="" class="contact-section2__text-body layout">Privacy policy</a>
                   </div>
                 </div>
                 <div class="contact-section2__block2-item1">
                   <div class="contact-section2__block4 layout">
-                    <div class="contact-section2__text-body layout">FAQ</div>
+                    <a href="" class="contact-section2__text-body layout">FAQ</a>
                   </div>
                 </div>
                 <div class="contact-section2__block2-item2">
                   <div class="contact-section2__block5 layout">
-                    <div class="contact-section2__text-body layout">Contact</div>
+                    <a href="../contact/contact.html" class="contact-section2__text-body layout">Contact</a>
                   </div>
                 </div>
                 <div class="contact-section2__block2-item3">
                   <div class="contact-section2__block6 layout">
-                    <div class="contact-section2__text-body layout">Legal notice</div>
+                    <a href="" class="contact-section2__text-body layout">Legal notice</a>
                   </div>
                 </div>
               </div>
