--- a/engage/EngageWithus.html
+++ b/engage/EngageWithus.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <!--  This source code is exported from pxCode, you can get more document from https://www.pxcode.io  -->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -43,14 +42,14 @@
               <div class="engage-withus-section1__flex-item1">
                 <div class="engage-withus-section1__block20 layout">
                   <div class="engage-withus-section1__block13 layout">
-                    <div class="engage-withus-section1__text-body2 layout">HOME</div>
+                    <a href="../home.html" class="engage-withus-section1__text-body2 layout">HOME</a>
                   </div>
                   <div class="engage-withus-section1__block14 layout">
-                    <div class="engage-withus-section1__text-body2 layout1">WHO WE ARE</div>
+                    <a href="../whoweare/Whoweare.html" class="engage-withus-section1__text-body2 layout1">WHO WE ARE</a>
                   </div>
                   <div class="engage-withus-section1__block21 layout">
                     <div class="engage-withus-section1__block22 layout">
-                      <div class="engage-withus-section1__text-body2 layout2">WHAT WE DO</div>
+                      <a href="../whatwedo/Whatwedo.html" class="engage-withus-section1__text-body2 layout2">WHAT WE DO</a>
                       <div class="engage-withus-section1__block22-spacer"></div>
                       <div class="engage-withus-section1__block22-item">
                         <div class="engage-withus-section1__block23 layout">
@@ -64,14 +63,14 @@
                     </div>
                   </div>
                   <div class="engage-withus-section1__block24 layout">
-                    <div class="engage-withus-section1__text-body2 layout3">UPCOMING</div>
+                    <a href="../upcoming/Upcoming.html" class="engage-withus-section1__text-body2 layout3">UPCOMING</a>
                   </div>
                   <div class="engage-withus-section1__block25 layout">
-                    <div class="engage-withus-section1__text-body3 layout">ENGAGE WITH US</div>
+                    <a href="../engage/EngageWithus.html" class="engage-withus-section1__text-body3 layout">ENGAGE WITH US</a>
                     <hr class="engage-withus-section1__line1 layout" />
                   </div>
                   <div class="engage-withus-section1__block17 layout">
-                    <div class="engage-withus-section1__text-body2 layout4">CONTACT</div>
+                    <a href="../contact/contact.html" class="engage-withus-section1__text-body2 layout4">CONTACT</a>
                   </div>
                 </div>
               </div>
@@ -86,7 +85,7 @@
             </div>
           </div>
           <div class="engage-withus-section1__flex1 layout">
-            <div class="engage-withus-section1__text-body layout">Home</div>
+            <a href="../home.html" class="engage-withus-section1__text-body layout">Home</a>
             <div class="engage-withus-section1__flex1-spacer"></div>
             <div class="engage-withus-section1__flex1-item">
               <div
@@ -95,7 +94,7 @@
               ></div>
             </div>
             <div class="engage-withus-section1__flex1-spacer1"></div>
-            <div class="engage-withus-section1__text-body layout">Engage with us</div>
+            <a href="../engage/EngageWithus.html" class="engage-withus-section1__text-body layout">Engage with us</a>
           </div>
           <h3 class="engage-withus-section1__subtitle layout">Grow with us</h3>
           <h1 class="engage-withus-section1__hero-title layout">Invest with us</h1>
@@ -105,9 +104,9 @@
             of the product/services or upcoming product ideas to discuss further at info@scinomat.com with the subject
             line of investment.
           </h5>
-          <div class="engage-withus-section1__block26 layout">
+          <a href="" class="engage-withus-section1__block26 layout">
             <h5 class="engage-withus-section1__highlights layout1">Get in touch</h5>
-          </div>
+          </a>
         </div>
       </section>
       <comment content="======= End section1 =======" break="true"></comment
@@ -145,9 +144,9 @@
                     </div>
                   </h5>
                 </div>
-                <div class="engage-withus-section3__block29 layout">
+                <a href="https://gmail.com" class="engage-withus-section3__block29 layout">
                   <h5 class="engage-withus-section3__highlights layout">Email us</h5>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -186,9 +185,9 @@
                     </div>
                   </h5>
                 </div>
-                <div class="engage-withus-section4__block29 layout">
+                <a href="https://gmail.com" class="engage-withus-section4__block29 layout">
                   <h5 class="engage-withus-section4__highlights layout">Email us</h5>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -216,9 +215,9 @@
                     </div>
                   </h5>
                 </div>
-                <div class="engage-withus-section5__block29 layout">
+                <a href="https://gmail.com" class="engage-withus-section5__block29 layout">
                   <h5 class="engage-withus-section5__highlights layout">Email us</h5>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -354,7 +353,7 @@ Please drop a mail with a subject line having your education level, domain and e
               <div class="engage-withus-section8__flex12-item">
                 <div class="engage-withus-section8__block8 layout">
                   <div class="engage-withus-section8__block8-item">
-                    <div class="engage-withus-section8__block9 layout">
+                    <a href="https://facebook.com" class="engage-withus-section8__block9 layout">
                       <div
                         style="--src:url(../assets/2444055d2d6ca2940c5a407f90426fb6.png)"
                         class="engage-withus-section8__image2 layout"
@@ -363,11 +362,11 @@ Please drop a mail with a subject line having your education level, domain and e
                         style="--src:url(../assets/1d78f9e6d5632068667323c85aea172c.png)"
                         class="engage-withus-section8__icon layout"
                       ></div>
-                    </div>
+                    </a>
                   </div>
                   <div class="engage-withus-section8__block8-spacer"></div>
                   <div class="engage-withus-section8__block8-item">
-                    <div class="engage-withus-section8__block10 layout">
+                    <a href="https://twitter.com" class="engage-withus-section8__block10 layout">
                       <div
                         style="--src:url(../assets/87af3b6b1e21d47db4afe37d8202c348.png)"
                         class="engage-withus-section8__image3 layout"
@@ -376,11 +375,11 @@ Please drop a mail with a subject line having your education level, domain and e
                         style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                         class="engage-withus-section8__icon1 layout"
                       ></div>
-                    </div>
+                    </a>
                   </div>
                   <div class="engage-withus-section8__block8-spacer"></div>
                   <div class="engage-withus-section8__block8-item">
-                    <div class="engage-withus-section8__block11 layout">
+                    <a href="https://linkedin.com" class="engage-withus-section8__block11 layout">
                       <div
                         style="--src:url(../assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
                         class="engage-withus-section8__icon2 layout"
@@ -389,7 +388,7 @@ Please drop a mail with a subject line having your education level, domain and e
                         style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                         class="engage-withus-section8__icon1 layout"
                       ></div>
-                    </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -398,27 +397,27 @@ Please drop a mail with a subject line having your education level, domain and e
                 <div class="engage-withus-section8__block12 layout">
                   <div class="engage-withus-section8__block12-item">
                     <div class="engage-withus-section8__block13 layout">
-                      <div class="engage-withus-section8__text-body2 layout">HOME</div>
+                      <a href="../home.html" class="engage-withus-section8__text-body2 layout">HOME</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block12-item1">
                     <div class="engage-withus-section8__block14 layout">
-                      <div class="engage-withus-section8__text-body2 layout1">WHO WE ARE</div>
+                      <a href="../whoweare/Whoweare.html" class="engage-withus-section8__text-body2 layout1">WHO WE ARE</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block12-item2">
                     <div class="engage-withus-section8__block15 layout">
-                      <div class="engage-withus-section8__text-body2 layout2">WHAT WE DO</div>
+                      <a href="../whatwedo/Whatwedo.html" class="engage-withus-section8__text-body2 layout2">WHAT WE DO</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block12-item3">
                     <div class="engage-withus-section8__block16 layout">
-                      <div class="engage-withus-section8__text-body2 layout3">ENGAGE WITH US</div>
+                      <a href="../engage/EngageWithus.html" class="engage-withus-section8__text-body2 layout3">ENGAGE WITH US</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block12-item4">
                     <div class="engage-withus-section8__block17 layout">
-                      <div class="engage-withus-section8__text-body2 layout4">CONTACT</div>
+                      <a href="../contact/contact.html" class="engage-withus-section8__text-body2 layout4">CONTACT</a>
                     </div>
                   </div>
                 </div>
@@ -437,22 +436,22 @@ Please drop a mail with a subject line having your education level, domain and e
                 <div class="engage-withus-section8__block2 layout">
                   <div class="engage-withus-section8__block2-item">
                     <div class="engage-withus-section8__block3 layout">
-                      <div class="engage-withus-section8__text-body layout">Privacy policy</div>
+                      <a href="" class="engage-withus-section8__text-body layout">Privacy policy</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block2-item1">
                     <div class="engage-withus-section8__block4 layout">
-                      <div class="engage-withus-section8__text-body layout">FAQ</div>
+                      <a href="" class="engage-withus-section8__text-body layout">FAQ</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block2-item2">
                     <div class="engage-withus-section8__block5 layout">
-                      <div class="engage-withus-section8__text-body layout">Contact</div>
+                      <a href="../contact/contact.html" class="engage-withus-section8__text-body layout">Contact</a>
                     </div>
                   </div>
                   <div class="engage-withus-section8__block2-item3">
                     <div class="engage-withus-section8__block6 layout">
-                      <div class="engage-withus-section8__text-body layout">Legal notice</div>
+                      <a href="" class="engage-withus-section8__text-body layout">Legal notice</a>
                     </div>
                   </div>
                 </div>
