--- a/matsc/MatScCopy.html
+++ b/matsc/MatScCopy.html
@@ -29,7 +29,7 @@
           style="--src:url(../assets/9ea7fe7292db1313a6918cab6533024a.png)"
           class="mat-sc-copy-section1__cover-block1 layout"
         >
-          <div class="mat-sc-copy-section1__text-body layout">Home</div>
+          <a href="../home.html" class="mat-sc-copy-section1__text-body layout">Home</a>
           <div class="mat-sc-copy-section1__cover-block1-spacer"></div>
           <div class="mat-sc-copy-section1__cover-block1-item">
             <div
@@ -116,164 +116,11 @@
         <div class="mat-sc-copy-section1__cover-block layout">
           <div class="mat-sc-copy-section1__flex1 layout">
             <div class="mat-sc-copy-section1__flex2 layout">
-              <div class="mat-sc-copy-section1__flex2-item">
-                <div
-                  style="--src:url(../assets/e441552f9e9c36299ffeff4a7cc2c2ac.png)"
-                  class="mat-sc-copy-section1__icon3 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__flex2-spacer"></div>
-              <div class="mat-sc-copy-section1__flex2-item1">
-                <div
-                  style="--src:url(../assets/49643839e29dd4a5ec5d5ad32a275e36.png)"
-                  class="mat-sc-copy-section1__image7 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__flex2-spacer"></div>
-              <div class="mat-sc-copy-section1__flex2-item2">
-                <div
-                  style="--src:url(../assets/6b5ade561ab004042277dc8483d9292a.png)"
-                  class="mat-sc-copy-section1__image8 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__flex2-spacer1"></div>
-              <div class="mat-sc-copy-section1__flex2-item3">
-                <div
-                  style="--src:url(../assets/321c785d2e19fa923e4c4a94a864ca56.png)"
-                  class="mat-sc-copy-section1__image9 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__flex2-spacer2"></div>
-              <div class="mat-sc-copy-section1__flex2-item4">
-                <div
-                  style="--src:url(../assets/fe59ffcfdeade84c89a16842e6e2eeaa.png)"
-                  class="mat-sc-copy-section1__image7 layout"
-                ></div>
-              </div>
+             MatSc
             </div>
+            
             <div class="mat-sc-copy-section1__block25 layout">
-              <div class="mat-sc-copy-section1__block25-item">
-                <div
-                  style="--src:url(../assets/9c14f81c7f0b37073e9c052b8848bdce.png)"
-                  class="mat-sc-copy-section1__image10 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item1">
-                <div
-                  style="--src:url(../assets/3122062bc10e90317f95c7513c2314e7.png)"
-                  class="mat-sc-copy-section1__image11 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer1"></div>
-              <div class="mat-sc-copy-section1__block25-item2">
-                <div
-                  style="--src:url(../assets/a6728af435d8e77e0df949facc501c55.png)"
-                  class="mat-sc-copy-section1__image12 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer2"></div>
-              <div class="mat-sc-copy-section1__block25-item3">
-                <div
-                  style="--src:url(../assets/073ed95d7ab1c5e88c4f7fe853bbf808.png)"
-                  class="mat-sc-copy-section1__image13 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer3"></div>
-              <div class="mat-sc-copy-section1__block25-item4">
-                <div
-                  style="--src:url(../assets/c8d5aca2c3cd6de7fc42d1d36032eb70.png)"
-                  class="mat-sc-copy-section1__image14 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer4"></div>
-              <div class="mat-sc-copy-section1__block25-item5">
-                <div class="mat-sc-copy-section1__box4 layout"></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item6">
-                <div
-                  style="--src:url(../assets/ba7f5a29d543c48823dff39f5c632852.png)"
-                  class="mat-sc-copy-section1__image15 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item7">
-                <div
-                  style="--src:url(../assets/13dffbfeabafe5873ae240f916ff9b0d.png)"
-                  class="mat-sc-copy-section1__image16 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer5"></div>
-              <div class="mat-sc-copy-section1__block25-item8">
-                <div
-                  style="--src:url(../assets/6833844b3b88a4ae108bd69155137dbd.png)"
-                  class="mat-sc-copy-section1__image14 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer6"></div>
-              <div class="mat-sc-copy-section1__block25-item">
-                <div
-                  style="--src:url(../assets/e6617ce1f0931f03415f6727a1243d0d.png)"
-                  class="mat-sc-copy-section1__image17 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer7"></div>
-              <div class="mat-sc-copy-section1__block25-item9">
-                <div
-                  style="--src:url(../assets/95cc55aa8f7d5c6e5553ad35a70cfcf9.png)"
-                  class="mat-sc-copy-section1__image13 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item10">
-                <div
-                  style="--src:url(../assets/86b6c7dec20b7002eb0b87e5e4b882a1.png)"
-                  class="mat-sc-copy-section1__icon4 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer8"></div>
-              <div class="mat-sc-copy-section1__block25-item11">
-                <div
-                  style="--src:url(../assets/6af0e3efce6290634de5d58b420f0a82.png)"
-                  class="mat-sc-copy-section1__image18 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer9"></div>
-              <div class="mat-sc-copy-section1__block25-item">
-                <div
-                  style="--src:url(../assets/e50f4600bbc6a61bb0353b309c654aae.png)"
-                  class="mat-sc-copy-section1__image10 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item12">
-                <div
-                  style="--src:url(../assets/14eb7a230929ca38ce827018d6e78f9f.png)"
-                  class="mat-sc-copy-section1__image16 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer10"></div>
-              <div class="mat-sc-copy-section1__block25-item13">
-                <div
-                  style="--src:url(../assets/1bf9f67ba28a7b65143e6b6291628911.png)"
-                  class="mat-sc-copy-section1__image12 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer11"></div>
-              <div class="mat-sc-copy-section1__block25-item14">
-                <div
-                  style="--src:url(../assets/4891ba42bc8a0f1be44121be13299bbf.png)"
-                  class="mat-sc-copy-section1__icon4 layout"
-                ></div>
-              </div>
-              <div class="mat-sc-copy-section1__block25-spacer"></div>
-              <div class="mat-sc-copy-section1__block25-item15">
-                <div
-                  style="--src:url(../assets/79015b0bd23b9ad2a081f04305869c3e.png)"
-                  class="mat-sc-copy-section1__image13 layout"
-                ></div>
-              </div>
+              consulting service
             </div>
             <h5 class="mat-sc-copy-section1__highlights1-box layout">
               <pre class="mat-sc-copy-section1__highlights1">
@@ -289,15 +136,14 @@ It is a service to help academia, researchers &amp; industries in their quest of
               requirement.
             </h4>
             <h4 class="mat-sc-copy-section1__highlights21-box layout">
-              <pre class="mat-sc-copy-section1__highlights21">
+              <div class="mat-sc-copy-section1__highlights21 " style="font-weight: lighter;">
 Depending upon the user’s requirement, the delivery of the solution can be as per the following engagement levels:
-
     • Seeking information 
     • Seeking a solution to a problem
     • Diagnosis for problem redefinition
     • Seeking recommendations 
     • Seeking implementation 
-    • Client learning facilitation</pre
+    • Client learning facilitation</div
               >
             </h4>
           </div>
