--- a/engage/EngageWithus.html
+++ b/engage/EngageWithus.html
@@ -460,6 +460,103 @@ Please drop a mail with a subject line having your education level, domain and e
           </div>
         </div>
       </section>
+      <div class="connect">
+        <div class="closekey">
+          <img src="./assets/close.png" alt="clo">
+        </div>
+      
+        <div class="objects">
+          <h1 class="home-section1__hero-title31 layout">Hello</h1>
+          <h4 class="home-section1__highlights63 layout">Let’s connect</h4>
+          <div class="latestupdate">
+            Get latest updates or engage with us
+            if you have some ideas.
+          </div>
+          <div class="engage-withus-section8__block8 layout">
+            <div class="engage-withus-section8__block8-item">
+              <a href="https://facebook.com" class="engage-withus-section8__block9 layout">
+                <div
+                  style="--src:url(../assets/2444055d2d6ca2940c5a407f90426fb6.png)"
+                  class="engage-withus-section8__image2 layout"
+                ></div>
+                <div
+                  style="--src:url(../assets/1d78f9e6d5632068667323c85aea172c.png)"
+                  class="engage-withus-section8__icon layout"
+                ></div>
+              </a>
+            </div>
+            <div class="engage-withus-section8__block8-spacer"></div>
+            <div class="engage-withus-section8__block8-item">
+              <a href="https://twitter.com" class="engage-withus-section8__block10 layout">
+                <div
+                  style="--src:url(../assets/87af3b6b1e21d47db4afe37d8202c348.png)"
+                  class="engage-withus-section8__image3 layout"
+                ></div>
+                <div
+                  style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
+                  class="engage-withus-section8__icon1 layout"
+                ></div>
+              </a>
+            </div>
+            <div class="engage-withus-section8__block8-spacer"></div>
+            <div class="engage-withus-section8__block8-item">
+              <a href="https://linkedin.com" class="engage-withus-section8__block11 layout">
+                <div
+                  style="--src:url(../assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
+                  class="engage-withus-section8__icon2 layout"
+                ></div>
+                <div
+                  style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
+                  class="engage-withus-section8__icon1 layout"
+                ></div>
+              </a>
+            </div>
+          </div>
+          <div class="home-section1__block55 layout">
+      
+            <a href="mailto:mukundwh8@gmail.com" >
+              EMAIL US
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="home-section1__block53 layout" >
+        <div class="home-section1__block54 layout" id="overview">
+          <div class="home-section1__paragraph-body3 layout">Overview</div>
+          <div class="home-section1__block54-spacer"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+        <div class="home-section1__block54 layout " id="products">
+          <div class="home-section1__paragraph-body4 layout">Products</div>
+          <div class="home-section1__block54-spacer1"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+        <div class="home-section1__block54 layout1" id="services">
+          <div class="home-section1__paragraph-body5 layout">Services</div>
+          <div class="home-section1__block54-spacer2"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="home-section1__block51 layout">
+        <div class="home-section1__block52 layout">
+          <div class="home-section1__paragraph-body-box layout">
+            <pre class="home-section1__paragraph-body">
+High energy planetary
+ball mill</pre>
+          </div>
+          <div class="home-section1__paragraph-body1 layout">Accessories</div>
+          <div class="home-section1__paragraph-body2 layout">Nano fluids &amp; Nano powders</div>
+        </div>
+      </div>
       <!-- ======= End section8 ======= --> 
 
     </main>
@@ -467,4 +564,5 @@ Please drop a mail with a subject line having your education level, domain and e
       AOS.init();
     </script>
   </body>
+  <script src="./js/script.js"></script>
 </html>
