--- a/upcoming/Upcoming.html
+++ b/upcoming/Upcoming.html
@@ -337,6 +337,44 @@ having a performance close to WC-CO based insert? </pre
           </div>
         </div>
       </div>
+
+      <div class="home-section1__block53 layout" >
+        <div class="home-section1__block54 layout" id="overview">
+          <div class="home-section1__paragraph-body3 layout">Overview</div>
+          <div class="home-section1__block54-spacer"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+        <div class="home-section1__block54 layout " id="products">
+          <div class="home-section1__paragraph-body4 layout">Products</div>
+          <div class="home-section1__block54-spacer1"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+        <div class="home-section1__block54 layout1" id="services">
+          <div class="home-section1__paragraph-body5 layout">Services</div>
+          <div class="home-section1__block54-spacer2"></div>
+          <div class="home-section1__block54-item">
+            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="home-section1__block51 layout">
+        <div class="home-section1__block52 layout">
+          <div class="home-section1__paragraph-body-box layout">
+            <pre class="home-section1__paragraph-body">
+High energy planetary
+ball mill</pre>
+          </div>
+          <div class="home-section1__paragraph-body1 layout">Accessories</div>
+          <div class="home-section1__paragraph-body2 layout">Nano fluids &amp; Nano powders</div>
+        </div>
+      </div>
+
+      
       <!-- ======= End section3 ======= --> 
 
     </main>
